--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@
 
 .Navcontainer nav .navContent .cont {
   border: 2px solid white;
-  max-width: 95%;
+  width: 95%;
   padding: 1.8rem;
   min-height: 35%;
 }
@@ -65,6 +65,10 @@
 .Navcontainer nav .navContent .cont h1 {
   color: white;
   font-size: 3.5rem;
+}
+
+.Contentcontainer {
+  max-width: 100vw;
 }
 
 .Contentcontainer .vrImage {
@@ -85,5 +89,13 @@
 
 .Contentcontainer .vrImage h1 {
   font-size: 2.5rem;
+}
+
+.Contentcontainer .gridContent div img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
 }
 /*# sourceMappingURL=main.css.map */
