--- a/main.scss
+++ b/main.scss
@@ -48,7 +48,7 @@ $color: (
        margin: 0 0.8rem;
          .cont{
            border: 2px solid white;
-           max-width: 95%;
+           width: 95%;
            padding: 1.8rem;
            min-height: 35%;
            h1{
@@ -62,6 +62,7 @@ $color: (
 }
 
 .Contentcontainer {
+    width: 100vw;
     .vrImage{
       padding: 1rem;
       text-align: center;
@@ -77,5 +78,14 @@ $color: (
       h1{
         font-size: 2.5rem;
       }
+    }
+    .gridContent{
+        div{
+            img{
+            
+              object-fit:cover;
+              object-position:top;
+            }
+        }
     }
 }
