--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@
 }
 
 .Contentcontainer {
-  max-width: 100vw;
+  width: 100vw;
 }
 
 .Contentcontainer .vrImage {
@@ -92,7 +92,6 @@
 }
 
 .Contentcontainer .gridContent div img {
-  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: top;
